--- a/angular.json
+++ b/angular.json
@@ -97,8 +97,14 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "ec92336b-ac1c-4166-b9af-0e2ef0108d87"
   }
 }
